--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>william</h1>
+    <h1>adam smith</h1>
     <img width="200px" src="images.jfif" alt="">
     <p>my first website opening</p>
 </body>
