--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>william</h1>
     <h1>adam smith</h1>
     <img width="200px" src="images.jfif" alt="">
-    <p>my first website opening</p>
+    <p>my first website opening this website created by prajeen c</p>
 </body>
 </html>
