--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>adam smith</h1>
     <img width="200px" src="images.jfif" alt="">
     <p>my first website</p>
-    <p>this website created by prajeen.c</p>
+    <p>this website created by prajeen  done with vs cod</p>
 </body>
 </html>
