--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>william</h1>
     <h1>adam smith</h1>
     <img width="200px" src="images.jfif" alt="">
-    <p>my first website</p>
+    <p>my first website opening</p>
     <p>this website created by prajeen  done with vs cod</p>
 </body>
 </html>
